update API & swagger
